update gradle to 7.2, jdk, grobid 0.7.3, grobid-quantities 0.7.3