@@ -1,3 +1,5 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 buildscript {
     repositories {
         mavenLocal()
@@ -17,7 +19,6 @@ plugins {
     id 'java'
     id 'application'
     id 'maven-publish'
-    id 'jacoco'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
     id "de.undercouch.download" version "4.1.1"
     id 'com.github.kt3k.coveralls' version '2.12.2'
@@ -63,7 +64,7 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
     //GROBID and grobid-quantities
-    implementation 'com.github.kermitt2:grobid-quantities:0.7.3'
+    implementation 'org.grobid:grobid-quantities:0.7.3'
     implementation 'org.grobid:grobid-core:0.7.3'
     implementation 'org.grobid:grobid-trainer:0.7.3'
     implementation 'org.grobid:grobid-service:0.7.3'
@@ -140,6 +141,34 @@ sourceSets.main.resources {
 
 test {
     exclude '**/**IntegrationTest**'
+    useJUnitPlatform()
+    maxHeapSize = "1024m"
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("./grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("./grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        def jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64/jep"
+        libraries = jepDir
+        jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64"
+        libraries += ":" + jepDir
+    } else {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
+            "--add-opens", "java.base/java.math=ALL-UNNAMED",
+            "--add-opens", "java.base/java.text=ALL-UNNAMED"
+    }
+    systemProperty "java.library.path", "${System.getProperty('java.library.path')}:" + libraries
 }
 
 tasks.run.workingDir = rootProject.rootDir
@@ -148,6 +177,60 @@ mainClassName = 'org.grobid.service.GrobidSuperconductorsApplication'
 
 run {
     args = ['server', 'resources/config/config.yml']
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
+            "${file("../grobid-home/lib/lin-64").absolutePath}:"
+    } else {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    }
+    workingDir = rootProject.rootDir
+    def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
+
+    systemProperty "java.library.path", javaLibraryPath
+}
+
+task integration(type: Test) {
+    include '**'
+
+    maxHeapSize = "1024m"
+
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("./grobid-home/lib/mac_arm-64").absolutePath}"
+        } else {
+            libraries = "${file("./grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        def jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64/jep"
+        libraries = jepDir
+        jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64"
+        libraries += ":" + jepDir
+    } else {
+        throw new RuntimeException("Unsupported platform!")
+    }
+
+    if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+//        jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.math=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.text=ALL-UNNAMED"
+    }
+    systemProperty "java.library.path", "${System.getProperty('java.library.path')}:" + libraries
 }
 
 
@@ -212,7 +295,7 @@ artifacts {
 //distZip.archiveClassifier = 'application'
 //distTar.archiveClassifier = 'application'
 
-distZip.enabled = false
+distZip.enabled = true
 distTar.enabled = false
 shadowDistZip.enabled = false
 shadowDistTar.enabled = false
